[project]
name = "iris-explainer"
version = "0.1.0"
description = "Add your description here"
dependencies = [
    "scikit-learn>=1.4.2",
    "pandas>=2.2.2",
    "numpy>=1.26.4",
    "jupyter>=1.0.0",
    "explainerdashboard>=0.4.7",
]
readme = "README.md"
requires-python = ">= 3.12"

[project.scripts]
hello = "iris_explainer:hello"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/iris_explainer"]
